fix text flickering

--- a/frontend/public/styles/index.css
+++ b/frontend/public/styles/index.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-font-smoothing: antialiased;
+}
+
 header {
     text-align: center;
     margin-left: auto;
